Внес правки в бизнес процесс

--- a/project/inspection/templates/inspection.html
+++ b/project/inspection/templates/inspection.html
@@ -2,26 +2,34 @@
 
 {% block content %}
 
-<div class="fs-2 text-centering">
-    Пожалуйста, выберете пациента для осмотра.
-</div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-2">
-        </div>
-        <div class="col-8">
-            <div class="fs-4" style="border-bottom: 5px solid #00709E">Ваши пациенты</div>
-            {% for patient in self_patients %}
-            {% include "include/inspection_patient_card.html" %}
-            {% endfor %}
-            <div class="fs-4" style="border-bottom: 5px solid #00709E">Пациенты других врачей</div>
-            {% for patient in other_patients %}
-            {% include "include/inspection_patient_card.html" %}
-            {% endfor %}
-        </div>
-        <div class="col-2">
+    <div class="fs-2 text-centering">
+        Пожалуйста, выберете пациента для осмотра.
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2">
+            </div>
+            <div class="col-8">
+                <div class="fs-4 mb-3" style="border-bottom: 5px solid #00709E">Ваши пациенты</div>
+                {% if self_patients %}
+                    {% for patient in self_patients %}
+                        {% include "include/inspection_patient_card.html" %}
+                    {% endfor %}
+                {% else %}
+                    <div class="fs-4 m-5" style="color: #FAFAFA;"> В этом разделе пока нет пациентов </div>
+                {% endif %}
+                <div class="fs-4" style="border-bottom: 5px solid #00709E">Пациенты других врачей</div>
+                {% if other_patients %}
+                    {% for patient in other_patients %}
+                        {% include "include/inspection_patient_card.html" %}
+                    {% endfor %}
+                {% else %}
+                    <div class="fs-4 m-5" style="color: #FAFAFA;"> В этом разделе пока нет пациентов </div>
+                {% endif %}
+            </div>
+            <div class="col-2">
+            </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
