--- a/project/request/templates/requests_main.html
+++ b/project/request/templates/requests_main.html
@@ -7,35 +7,35 @@
         <div class="fs-4">Для выбора необходимого запроса просто нажмите соответствующую этому запросу кнопку.</div>
     </div>
     <table cellpadding="10px" class="fs-4 m-5">
-        <tr>
-            <td>Отчет по пациентам указанного врача.</td>
+        <tr class="m-3" style="border-bottom: 3px solid #00709E">
+            <td>Отчет по пациентам указанного врача</td>
             <td>
                 <a class="link-btn m-2" href="request1">
-                    Сделать запрос 1
+                    Сделать запрос
                 </a>
             </td>
         </tr>
-        <tr>
+        <tr class="m-3" style="border-bottom: 3px solid #00709E">
             <td>Отчет по пациентам, в истории болезни которых вносил запись указанный врач</td>
             <td>
                 <a class="link-btn m-2" href="request2">
-                Сделать запрос 2
+                Сделать запрос
             </a>
             </td>
         </tr>
-        <tr>
+        <tr class="m-3" style="border-bottom: 3px solid #00709E">
             <td>Отчет по пациентам, с фильтром по дате рождения</td>
             <td>
                 <a class="link-btn m-2" href="request3">
-                Сделать запрос 3
+                Сделать запрос
             </a>
             </td>
         </tr>
-        <tr>
+        <tr class="m-3" style="border-bottom: 3px solid #00709E">
             <td>Отчет по врачам, с фильтром по дате приема на работу</td>
             <td>
                 <a class="link-btn m-2" href="request4">
-                Сделать запрос 4
+                Сделать запрос
             </a>
             </td>
         </tr>
