--- a/project/appointment/templates/appointment_rewrite.html
+++ b/project/appointment/templates/appointment_rewrite.html
@@ -11,7 +11,7 @@
         <div class="col-8">
             <form class="fs-4 p-5 w-75" action="/appointment/rewrite" method="post">
                 <div class="mb-3">
-                    <label for="InputDoctor" class="form-label">Привязать врача</label>
+                    <label for="InputDoctor" class="form-label">Пациент</label>
                     <select id="InputDoctor" name="patient" class="fs-4 form-select mt-2 mb-2" required>
                         {% for patient in patients %}
                         <option class="fs-4" value="{{ patient[0] }}">{{ patient[1] }} {{ patient[2] }} {{ patient[3] }}</option>
