--- a/project/inspection/templates/include/inspection_patient_card.html
+++ b/project/inspection/templates/include/inspection_patient_card.html
@@ -5,7 +5,7 @@
         <p class="card-text">Дата рождения: {{ patient[4] }} </p>
         <p class="card-text">Адрес: {{ patient[5] }} </p>
         <p class="card-text">Паспортные данные: {{ patient[6] }} </p>
-        <form action="/inspection" method="post">
+        <form action="/inspection/spec_patient" method="get">
             <input type="hidden" name="patient" value="{{ patient[0] }}">
             <input type="hidden" name="doctor" value="{{ doctor }}">
             <button type="submit" class="submit-btn">Провести осмотр</button>
