--- a/project/request/templates/request4.html
+++ b/project/request/templates/request4.html
@@ -1,16 +1,22 @@
 {% extends "requests_layout.html" %}
 
+{% block header %}
+    <div class="text-centering fs-4 p-5" style="border-bottom: solid 5px white">
+        Отчет по врачам, с фильтром по дате приема на работу
+    </div>
+{% endblock %}
+
 {% block result %}
-{% for doctor in doctors %}
-    {% include "include/request4_doctor_card.html" %}
-{% endfor %}
+    {% for doctor in doctors %}
+        {% include "include/request4_doctor_card.html" %}
+    {% endfor %}
 {% endblock %}
 
 {% block filter %}
-<form class="p-5 m-1" action="request4" method="post">
-    <div class="mb-4">
-        <input type="date" name="date" value=2021-12-28">
-    </div>
-    <button type="submit" class="submit-btn">Применить фильтр</button>
-</form>
+    <form class="p-5 m-1" action="request4" method="post">
+        <div class="mb-4">
+            <input type="date" name="date" value=2021-12-28">
+        </div>
+        <button type="submit" class="submit-btn">Применить фильтр</button>
+    </form>
 {% endblock %}
