--- a/project/inspection/templates/include/inspection_patient_spec_card.html
+++ b/project/inspection/templates/include/inspection_patient_spec_card.html
@@ -6,6 +6,7 @@
             <p class="card-text">Дата рождения: {{ patient_data[4] }} </p>
             <p class="card-text">Адрес: {{ patient_data[5] }} </p>
             <p class="card-text">Паспортные данные: {{ patient_data[6] }} </p>
+            <p class="card-text">Палата: {{ room[1] }} </p>
         </div>
         <div class="mt-3">
             <div class="fs-3 mb-3">Данные о враче пациента:</div>
