--- a/project/inspection/templates/inspect_spec_patient.html
+++ b/project/inspection/templates/inspect_spec_patient.html
@@ -62,6 +62,7 @@
                             <input type="hidden" name="patient" value="{{ patient_data[0] }}">
                             <input type="hidden" name="doctor" value="{{ doctor }}">
                             <input type="hidden" name="history" value="{{ history[0] }}">
+                            <input type="hidden" name="room_id" value="{{ room[0] }}">
                             <div class="mb-3">
                                 <label for="Diagnose" class="form-label">Диагноз при выписке</label>
                                 <input type="text" class="form-control" id="Diagnose" name="diagnose" required>
