--- a/project/templates/main.html
+++ b/project/templates/main.html
@@ -24,8 +24,7 @@
                 {% endif %}
 
                 {% if session['group'] is eq('administrator') %}
-                    <a class="link-btn m-2" href="/appointment/new_patient"> Записать нового пациента </a>
-                    <a class="link-btn m-2" href="/appointment/rewrite"> Записать пациента заново </a>
+                    <a class="link-btn m-2" href="/appointment/new_patient"> Принять пациента на лечение </a>
                     <a class="link-btn m-2" href="/exit"> Завершить работу </a>
                 {% endif %}
 
